# portfolio_checker

./: .gitignore  PORTFOLIO_DATA_ARCHITECTURE.md  claim_all_wallets.py  start_react.sh  zzz.txt
.kiro/steering/: general-guidelines.md
documents/: 1-Developer Quickstart.txt  10-Gamma Endpoints_1_health.txt  10-Gamma Endpoints_2_sports.txt  10-Gamma Endpoints_3_tags.txt  10-Gamma Endpoints_4_events.txt  10-Gamma Endpoints_5_markets.txt  10-Gamma Endpoints_6_series.txt  10-Gamma Endpoints_7_comments.txt  10-Gamma Endpoints_8_search.txt  11-Data-API.txt  12-Bridge & Swap.txt  13-Subgraph.txt  14-Resolution.txt  15-Rewards.txt  16-Conditional Token Frameworks.txt  17-Proxy Wallets.txt  18-Negative Risk.txt  2-Polymarket Builders Program.txt  3-Central Limit Order Book.txt  4-CLOB Requests.txt  5-Order Manipulation.txt  6-Trades.txt  7-Websocket.txt  8-Real Time Data Stream.txt  9-Gamma Structure.txt  content.md
portfolio-backend/: Cargo.toml  Dockerfile  nixpacks.toml  railpack.json  railway.toml
portfolio-backend/src/: config.rs  db.rs  error.rs  main.rs  portfolio.rs
portfolio-frontend/: package-lock.json  package.json
portfolio-frontend/src/app/: globals.css  layout.tsx  page.tsx
rs-clob-client/: .gitignore
rs-clob-client/examples/: approvals.rs
rs-clob-client/src/: error.rs  lib.rs
